tests/tests/ui/create_missing_multiple_required_fields.stderr
error[E0599]: the method `check` exists for struct `__UserCreateVerify`, but its trait bounds were not satisfied
  --> tests/ui/create_missing_multiple_required_fields.rs:13:13
   |
 1 | #[derive(toasty::Model)]
   |          ------------- method `check` not found for this struct
...
13 |     let _ = toasty::create!(User {});
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called on `__UserCreateVerify` due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/crates/toasty/src/lib.rs
   |
   |     pub struct NotSet;
   |     ----------------- doesn't satisfy `NotSet: __user_create_has_email` or `NotSet: __user_create_has_name`
   |
note: the following trait bounds were not satisfied:
      `NotSet: __user_create_has_email`
      `NotSet: __user_create_has_name`
  --> tests/ui/create_missing_multiple_required_fields.rs:1:10
   |
 1 | #[derive(toasty::Model)]
   |          ^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
   = note: this error originates in the macro `toasty::create` (in Nightly builds, run with -Z macro-backtrace for more info)
